# mkxai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt  build.cmd  dependencies.txt
python/: tfDetection.py  tfDetection_multiprocess.py
src/: Application.cpp  Application.h  Config.h  DecisionTree.cpp  DecisionTree.h  IOKeyboard.h  IOViGEm.cpp  ImageProcessor.cpp  ImageProcessor.h  Keycodes.h  Player.cpp  Player.h  PythonWrapper.h  RandomNumberGenerator.cpp  ScreenCapture.cpp  ScreenCapture.h  Utility.cpp  Utility.h  main.cpp
src/General/: DecisionTree.cpp  Event.h  IOInterface.cpp  IOInterface.h  IOKeyboard.cpp  IOViGEm.cpp  IOViGEm.h  ImageProcessor.cpp  ImageProcessor.h  Keycodes.h  NeuralNetwork.cpp  NeuralNetwork.h  ScreenCapture.cpp  ScreenCapture.h
src/Player/: Player.cpp  Player.h  StateApproach.cpp  StateApproach.h  StateAttack.cpp  StateAttack.h
src/States/: State.cpp  State.h  StateApproach.cpp  StateApproach.h  StateAttack.cpp  StateAttack.h
src/Utility/: Exceptions.h  PythonWrapper.cpp  PythonWrapper.h  RandomNumberGenerator.h  Serializable.h  Utility.cpp  Utility.h
